--- a/app/styles/filterableTable.sass
+++ b/app/styles/filterableTable.sass
@@ -1,8 +1,11 @@
 .filterableTable
 	padding: 20px
+	svg
+		width: 40px
+		top: 30px
+		left: 300px
+		position: absolute
 	input
 		font-size: 1.4em
-		border: 1px solid gray
 		padding: 0.4em 0.4em
 		margin-bottom: 1em
-
